--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
-        "vue-axios": "^3.4.0"
+        "vue-axios": "^3.4.0",
+        "vue-tree-chart": "^1.2.9"
     }
 }
